--- a/templates/index.html
+++ b/templates/index.html
@@ -292,8 +292,8 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="white-text text-lighten-3" href="#">Jeeva T, Pavithira S,Siva Kumar P, Punitha B</a><br/>
-      <a class="white-text text-lighten-3" href="#">Jeeva, Pavithira, Siva Kumar, Punitha</a>
+      Made by <a class="white-text text-lighten-3" href="#">Jeeva T</a><br/>
+      <a class="white-text text-lighten-3" href="#">copyright @jeevasakthi118</a>
       </div>
     </div>
   </footer>
